# windy

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
windspeed/: admin.py  apps.py  models.py
windspeed/api/: routes.py  schema.py
windspeed/migrations/: 0001_initial.py
windspeed/tests/: test_api.py
windspeed/utils/data/: __init__.py  create_test_data.py
windy/: api.py  asgi.py  settings.py  wsgi.py
